homeworks/Cloud Kub SecurityContext/ansible/files/manifests/simplepod-readonlyfs.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: simplepod-readonlyfs
spec:
  containers:
  - name: simplepod-readonlyfs
    image: centos:centos7
    args:
    - sleep
    - "3600"
    securityContext:
      readOnlyRootFilesystem: true
