homeworks/Cloud Kub SecurityContext/ansible/files/manifests/simplepod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: simplepod
spec:
  containers:
  - name: simplepod
    image: centos:centos7
    args:
    - sleep
    - "3600"
